--- a/config/database.yml
+++ b/config/database.yml
@@ -1,8 +1,8 @@
 development:
   adapter: postgresql
-  database: my_database_development
-  pool: 5
-  timeout: 5000
+  host: localhost
+  username: user
+  database: app-dev
 test:
   adapter: postgresql
   database: my_database_test
